[package]
name = "iggy_connector_elasticsearch_source"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
iggy-connector-sdk = { path = "../../sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
elasticsearch = "8.5"
dashmap = "5.5"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
sysinfo = "0.29"